<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#AAA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#000"
            android:text="@string/app_name"
            android:textColor="#FFDF00"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:id="@+id/tt"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ad"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/lang_selection"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:id="@+id/cyl"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">

             <Button
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="@string/english"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:id="@+id/eng"
                 android:layout_marginLeft="40dp"/>

             <Button
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="@string/Marathi"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:layout_marginRight="40dp"
                 android:id="@+id/mr"
                 android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/hindi"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/hnd"/>

            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:text="@string/punjabi"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/pnb"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/gujarati"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/gj"/>
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:text="@string/malayalam"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/mlm"/>

        </RelativeLayout>

        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/Telugu"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/tl"/>
        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/Kannada"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/kn"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/nxt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/nxt"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/exit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/exit"/>

        </RelativeLayout>
        </LinearLayout>
        </ScrollView>

    </LinearLayout>



</LinearLayout>
