<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about_atm_mec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/title"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:gravity="center"
            android:id="@+id/tt"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ad"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/atmmachineinfo2"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/cyl"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/amc"
                android:background="@color/btncolor"
                android:text="@string/machinecontrols"
                android:textSize="20dp"
                android:layout_marginTop="30dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/btncolor"
                android:id="@+id/gpw"
                android:text="@string/generic"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:background="@color/btncolor"
                android:id="@+id/amiback"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
