<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#AAA">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#000"
        android:text="@string/app_name"
        android:textColor="#FFDF00"
        android:textStyle="bold"
        android:textSize="35sp"
        android:gravity="center"
        android:id="@+id/tt"/>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.gms.ads.AdView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ad"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawHorizontalTrack="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_your_atm_card"
                android:textStyle="bold"
                android:textSize="35sp"
                android:textColor="#000"
                android:id="@+id/aci"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="200dp"
                android:src="@mipmap/atminfoback"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/binfo"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/back"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/pro"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>